force-app/main/default/objects/OrderStatusHistory__c/OrderStatusHistory__c.object-meta.xml
<CustomObject>
    <description>HISTORIQUE - Objet pour pipeline GC</description>
    <label>Historique des statuts de commande</label>
    <nameField>
        <displayFormat>OSH-{0000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historique des statuts de commande</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>