force-app/main/default/objects/OrderStatusHistory__c/fields/applicationDate__c.field-meta.xml
<CustomField>
    <fullName>applicationDate__c</fullName>
    <label>Date d&apos;application</label>
    <type>Date</type>
</CustomField>