force-app/main/default/objects/OrderStatusHistory__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Commande</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La commande n&apos;est pas une commande client!</errorMessage>
        <filterItems>
            <field>Order.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CustomerOrder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Historique des statuts de commande</relationshipLabel>
    <relationshipName>OrderStatusHistory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>