force-app/main/default/objects/OrderStatusHistory__c/fields/isLegacy__c.field-meta.xml
<CustomField>
    <fullName>isLegacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[#] Enregistrement historique</label>
    <type>Checkbox</type>
</CustomField>