force-app/main/default/objects/OrderStatusHistory__c/fields/oldCompositeStatus__c.field-meta.xml
<CustomField>
    <fullName>oldCompositeStatus__c</fullName>
    <description>Statut GC de la commande</description>
    <label>Ancien statut composite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>