force-app/main/default/objects/OrderStatusHistory__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Statut Kube3 de la commande</description>
    <label>Statut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>