force-app/main/default/objects/OrderStatusHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>customerOrder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>oldCompositeStatus__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>